--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 Emmanuel Akinwande <akinwandeemmanuel899@gmail.com>
-Sedenu Adams <>
+Sedenu Adams <adamsmonday1@gmail.com>
